--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,11 @@ body {
     line-height: 1.6;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 header {
     display: flex;
     padding: 20px 40px;
@@ -117,6 +122,7 @@ h2 {
 }
 
 .services .service {
+    cursor: pointer;
     flex: 1;
     text-align: center;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
@@ -250,7 +256,36 @@ h2 {
     width: 29%;
 }
 
-@media (max-width: 1024px) {
+.testimonial-holder {
+    margin-top: 30px;
+}
+
+.testimonial-holder p {
+    padding: 0 85px;
+    width: 100%;
+}
+
+.testimonial-holder .reference-p {
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.testimonial-holder a,
+.testimonial-holder .reference-p {
+    padding: 0 80px;
+}
+
+@media (max-width: 1400px) {
+    .pricing-holder button {
+        font-size: 10px;
+    }
+
+    .sub-pricing .pricing-holder {
+        height: 280px;
+    }
+}
+
+@media (max-width: 1200px) {
     .main {
         flex-direction: column;
         padding: 20px 40px;
@@ -265,6 +300,10 @@ h2 {
         text-align: center;
     }
 
+    .right img {
+        padding-left: 20%;
+    }
+
     h2 {
         padding: 0 40px;
         font-size: 32px;
@@ -275,6 +314,29 @@ h2 {
     }
 }
 
+@media (max-width: 1000px) {
+    .services {
+        gap: 20px;
+    }
+
+    .services .service p {
+        font-size: 12px;
+    }
+
+    .services .service h3 {
+        font-size: 18px;
+    }
+
+    .pricing .pricing-holder button {
+        font-size: 9px;
+    }
+
+    .sub-pricing .pricing-holder {
+        width: 85%;
+        height: 240px;
+    }
+}
+
 @media (max-width: 768px) {
     .left h1 {
         font-size: 36px;
@@ -282,10 +344,62 @@ h2 {
 
     .right img {
         padding: 0 20px;
+        margin-top: 30px;
     }
 
     .services .service {
         font-size: 18px;
         padding: 30px;
+    }
+
+    .services .service p {
+        font-size: 10px;
+    }
+
+    .services .service h3 {
+        font-size: 12px;
+    }
+
+    .services .service:hover {
+        padding: 40px;
+    }
+
+    .sub-pricing .pricing-holder h3,
+    .pricing .pricing-holder h3 {
+        font-size: 18px;
+    }
+
+    .pricing .pricing-holder button {
+        font-size: 7px;
+    }
+
+    header #menu {
+        display: block;
+    }
+}
+
+@media (max-width: 500px) {
+    .services {
+        gap: 15px;
+        flex-direction: column;
+    }
+
+    header #menu {
+        display: none;
+    }
+}
+
+@media (max-width: 300px) {
+    header h1 {
+        font-size: 16px;
+    }
+
+    h2 {
+        font-size: 24px;
+        text-align: center;
+    }
+
+    .services .service p {
+        font-size: 6px;
     }
 }
