--- a/about/main.css
+++ b/about/main.css
@@ -8,6 +8,8 @@ h1 {
 body {
 
   background-color: #F9F7F5;
+  cursor: cell;
+  line-height: 1.6;
 
 }
 
@@ -18,11 +20,47 @@ p {
   text-align: center
 }
 
+#showcase {
+
+  font-family: "Arial"
+
+  text-align: center;
+
+}
+
+#minidiv {
+
+  
+  background-color: #fff;
+  border: 1px solid #eeeeee;
+  border-radius: 25px;
+  text-align: center;
+
+}
+
+#ultradiv {
+
+  border: 1px solid #eeeeee;
+  background-color: #fff;
+  border-radius: 25px;
+  text-align: center;
+
+}
+
+#orangediv {
+
+  border: 1px solid #eeeeee;
+  background-color: #fff;
+  border-radius: 25px;
+  text-align: center;
+
+}
+
 #ultra {
   
   font-family: "Arial" , sans-serif;
   
-  text-align: left
+  text-align: center;
 
 }
 
@@ -34,24 +72,34 @@ p {
 
 }
 
-#orangediv {
-
-  background-color: #fff
-  border-radius: 20px;
-  border: 1px solid #eeeeee
-  
-}
-
 #mini {
 
   font-family: "Arial" , sans-serif;
 
-  text-align : right
+  text-align : center;
+
+}
+
+#cyrus {
+
+  font-family: "Arial" , sans-serif;
+
+  text-align : center;
+
+}
+
+
+#houndzpic {
+
+  width: 200px;
+
+  height: 200px;
 
 }
 
 #meetthedevs {
 
+  color: #534ef4;
   text-align : center;
   font-family: "Arial" , sans-serif;
 
@@ -73,6 +121,14 @@ p {
 
 }
 
+#cyruspic {
+
+  width: 200px;
+
+  height: 200px;
+
+}
+
 #ultrapic {
 
   width: 200px;
@@ -86,25 +142,36 @@ p {
    display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  
-}
-
-#meettheteam {
-
-  text-align : center;
-  font-family: "Arial" , sans-serif;
-
-}
-
-#cyruspic {
-
-  width: 200px;
-  height: 200px;
 
 }
 
 #main {
   padding: 20px;
+}
+
+header {
+  display: flex;
+  padding: 20px 40px;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.02), 0px 1px 3px rgba(0, 0, 0, 0.03);
+}
+
+h1 {
+  font-size: 26px;
+  margin-right: 70%;
+}
+
+header button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 6px;
+}
+
+header i {
+  font-size: 24px;
 }
 
 .sidebar {
@@ -112,104 +179,53 @@ p {
   width: 0;
   position: fixed;
   z-index: 1;
-  top: 10px;
-  left: 10px;
-  background-color: #111;
+  top: 80px;
+  background-color: #e9e9e9;
   overflow-x: hidden;
   padding-top: 60px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.02), 0px 1px 3px rgba(0, 0, 0, 0.03);
   transition: width 0.5s ease;
 }
 
-.openbtn {
-  position: relative;
-  z-index: 2;
-}
-
 .sidebar a {
-  
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
-  color: #818181;
+  font-size: 18px;
+  color: #000000;
   display: block;
-  transition: 0.3;
-  
+  transition: 0.3s;
 }
 
 .sidebar a:hover {
-  
-  color: #f1f1f1;
-  
+  color: #838383; 
 }
 
-.sidebar .closebtn {
-  
-  position: absolute;
+#meettheteam {
+
+  color: #534ef4;
+
+  font-family: "Arial" , sans-serif;
+
+  text-align: center
+
+}
+
+.scroll-watcher {
+
+  height: 10px;
+  position: fixed;
   top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-  
-}
-
-.openbtn {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  transition: left 0.5s ease;
-}
-
-.openbtn:hover {
-  
-  background-color: #444
-  
-}
-
-#main {
-  
-  transition: margin-left .5s;
-  padding: 20px;
-  
-}
-
-@media screen and (max-height: 450px) {
-  
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-  
-}
-
-#abouth1 {
-
-  font-family: "Arial" , sans-serif;
-  
-}
-
-#abouth2 {
-
-  font-family: "Arial" , sans-serif;
-  text-align: center;
+  z-index: 1000;
+  background-color: lime;
+  width: 100%;
+  scale: 0, 
+  animation: scroll-watcher linear;
+  animation-timeline: scroll()
 
 }
 
-#minidiv {
+@keyrames scroll-watcher {
 
-  background-color: #fff
-  border-radius: 20px;
-  border: 1px solid #eeeeee
-  
-}
+  to { scale: 1 1; }
 
-#ultradiv {
-
-  background-color: #fff
-  border-radius: 20px;
-  border: 1px solid #eeeeee
-  
 }
