--- a/about/main.css
+++ b/about/main.css
@@ -150,31 +150,36 @@ p {
   padding: 20px;
 }
 
-header {
-  display: flex;
-  padding: 20px 40px;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.02), 0px 1px 3px rgba(0, 0, 0, 0.03);
-}
-
 h1 {
   font-size: 26px;
   margin-right: 70%;
 }
 
-header button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 18px;
-  padding: 6px;
+header {
+    display: flex;
+    padding: 20px 40px;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.02), 0px 1px 3px rgba(0, 0, 0, 0.03);
+    width: 100%;
+    position: absolute;
+    top: 0;
+    padding: 20px 25px;
 }
 
-header i {
-  font-size: 24px;
+header div {
+    display: flex;
 }
 
+header a {
+    color: #000000;
+    transition: 0.2s;
+    padding-right: 20px;
+}
+
+header a:hover {
+    color: #aaaaaa;
+}
 .sidebar {
   height: 100%;
   width: 0;
