--- a/about/main.css
+++ b/about/main.css
@@ -26,7 +26,7 @@ p {
 
 #showcase {
 
-  font-family: "Arial"
+  font-family: "Arial";
 
   text-align: center;
 
@@ -39,6 +39,7 @@ p {
   border: 1px solid #eeeeee;
   border-radius: 8px;
   text-align: center;
+  padding: 8px;
 
 }
 
@@ -48,6 +49,7 @@ p {
   background-color: #fff;
   border-radius: 8px;
   text-align: center;
+  padding: 8px;
 
 }
 
@@ -57,6 +59,7 @@ p {
   background-color: #fff;
   border-radius: 8px;
   text-align: center;
+  padding: 8px;
 
 }
 
