--- a/about/main.css
+++ b/about/main.css
@@ -1,3 +1,10 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 h1 {
   
   font-family: "Arial" , sans-serif;
@@ -171,6 +178,7 @@ header {
     width: 100%;
     top: 0;
     padding: 20px 25px;
+    margin-bottom: 50px;
 }
 
 header div {
@@ -230,9 +238,9 @@ header a:hover {
   z-index: 1000;
   background-color: lime;
   width: 100%;
-  scale: 0, 
+  scale: 0;
   animation: scroll-watcher linear;
-  animation-timeline: scroll()
+  animation-timeline: scroll();
 
 }
 
