--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,61 @@ a {
     color: black;
 }
 
+.container {
+    display: none;
+}
+
+.preloader-container {
+    position: fixed;
+    inset: 0;
+    background-color: #000;
+    z-index: 99;
+    height: 100%;
+    cursor: none;
+    transition: 1s;
+}
+
+#off {
+    opacity: 0;
+}
+
+#gone {
+    display: none;
+}
+
+.preloader-container svg {
+    font-weight: bold;
+    stroke: #fff;
+    stroke-width: 0.25px;
+    height: 100%;
+    width: 100%;
+}
+
+.preloader-container svg text {
+    animation: 4s ease alternate infinite stroke-animate;
+}
+
+@keyframes stroke-animate {
+    0% {
+        fill: transparent;
+        stroke-dashoffset: 25%;
+        stroke-dasharray: 0 32%;
+    }
+
+    50% {
+        fill: transparent;
+    }
+
+    80%,
+    100% {
+        fill: #fff;
+        stroke: transparent;
+        stroke-width: 0;
+        stroke-dashoffset: -25%;
+        stroke-dasharray: 32% 0;
+    }
+}
+
 header {
     display: flex;
     padding: 20px 40px;
@@ -29,16 +84,20 @@ h1 {
     margin-right: auto;
 }
 
-header button {
+#menu {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 18px;
-    padding: 6px;
 }
 
-header i {
-    font-size: 24px;
+#menu span {
+    width: 25px;
+    height: 2.5px;
+    background-color: #000;
+    transition: 0.5s ease-in-out;
 }
 
 .sidebar {
